css input changes

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
       <div class="container-input">
 
         <div class="input-mid">
-            <input id="firstname" type="text" name="firstname" maxlength="25" placeholder="First Name">
+            <input class="input-total" id="firstname" type="text" name="firstname" maxlength="25" placeholder="First Name">
             <span id=""></span>
         </div>
-        
+
         <div class="input-mid">
-            <input id="lastname" type="text" name="lastname" maxlength="20" placeholder="Last Name">
+            <input class="input-total" id="lastname" type="text" name="lastname" maxlength="20" placeholder="Last Name">
             <span id=""></span>
         </div>
 
         <div class="input-total">
-        <input id="email" type="email" name="email" maxlength="30" placeholder="E-mail Address">
-        <span id=""></span></div>
+        <input class="input-total" id="email" type="email" name="email" maxlength="30" placeholder="E-mail Address">
+        <span id="">hey</span></div>
         
 
         <input class="input-total" id="username" type="text" name="username" maxlength="20"  placeholder="Username">
