editing html and css page

--- a/index.html
+++ b/index.html
@@ -25,23 +25,31 @@
         </div>
 
         <div class="input-total">
-        <input class="input-total" id="email" type="email" name="email" maxlength="30" placeholder="E-mail Address">
-        <span id="">hey</span></div>
+            <input class="input-total" id="email" type="email" name="email" maxlength="30" placeholder="E-mail Address">
+            <span id=""></span>
+        </div>
         
+        <div class="input-total">
+            <input class="input-total" id="username" type="text" name="username" maxlength="20"  placeholder="Username">
+            <span id=""></span>
+        </div>
 
-        <input class="input-total" id="username" type="text" name="username" maxlength="20"  placeholder="Username">
-        <span id=""></span>
+        <div class="input-mid">
+            <input class="input-total" id="password" type="password" name="password" maxlength="20" placeholder="Password">
+            <span id="">psst</span>
+        </div>
 
-        <input class="input-mid" id="password" type="password" name="password" maxlength="20" placeholder="Password">
-        <span id=""></span>
+        <div class="input-mid">
+            <input class="input-total" id="confirmPassword" type="password" name="confirmPassword" maxlength="20" placeholder="Re enter Password">
+            <span id=""></span>
+        </div>
 
-        <input class="input-mid" id="confirmPassword" type="password" name="password" maxlength="20" placeholder="Password">
-        <span id=""></span>
+        <div class="input-total">
+            <input class="input-total" id="mobile" type="text" name="mobile" maxlength="15" placeholder="Mobile#">
+            <span id="">hey</span>
+        </div>
 
-        <input class="input-total" id="mobile" type="text" name="mobile" maxlength="15" placeholder="Mobile#">
-        <span id=""></span>
-
-        <p> message: <br/><textarea cols="61" rows="10" name="msg" id="message" maxlength="500" placeholder="Maxlength:500 alphanumeric characters"></textarea> <br><br><br></p>
+        <p> message: <br/><textarea cols="55" name="msg" id="message" maxlength="500" placeholder="Maxlength:500 alphanumeric characters"></textarea> <br><br><br></p>
         
         <input class= "btn-send" type="submit" value="Sign Me Up">
         </div>
