adding welcome page

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <title> Simple Form Validation - Sheik Oodallyn</title>
+        <title> Simple Form Validation - Sheik Oodally</title>
    <link rel="stylesheet" type="text/css" href="index.css">
 
   </head>
       <body>
       <h1>Form Validation</h1>
 
-      <form class="form-register" method="post" onsubmit="return validate();">
+      <form class="form-register" method="post" action="welcome.html" onsubmit="return validate();">
       <h2 class="form__title">Create an Account</h2>
       <div class="container-input">
 
