--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="container-input">
 
         <div class="input-mid">
-            <input class="input-total" id="firstname" type="text" maxlength="30" name="firstname" placeholder="First Name">
+            <input class="input-total" id="firstname" type="text" font-size: 5rem; name="firstname" placeholder="First Name">
             <span id="firstname_span"></span>
         </div>
 
@@ -26,12 +26,12 @@
         </div>
 
         <div class="input-total">
-            <input class="input-total" id="email" type="email" name="email" placeholder="E-mail Address">
+            <input class="input-total" id="email" type="email"  name="email" placeholder="E-mail Address">
             <span id="email_span"></span>
         </div>
         
         <div class="input-total">
-            <input class="input-total" id="username" type="text" name="username" placeholder="Username">
+            <input class="input-total" id="username" type="text" maxlength="30" name="username" placeholder="Username">
             <span id="username_span"></span>
         </div>
 
