--- a/welcome.html
+++ b/welcome.html
@@ -13,19 +13,31 @@
     }
 
     h1{
-        font-size: 5rem;
+        font-size: 3rem;
         text-align: center;
     }
 
     h3{
-        font-size: 3rem;
+        font-size: 2rem;
         text-align: center;
     }
     </style>
 
     </head>
     <body>
-        <h1>Welcome</h1>
+        <h1>Welcome <text id="usernameId"></text></h1>
         <h3>Thank you for signing up</h3>
+
+        <script>
+            if (typeof(Storage) !== "undefined") {
+                // Retrieve
+                document.getElementById("usernameId").innerHTML = sessionStorage.getItem("username");
+
+                //clear storge
+            } 
+            else {
+                console.log("Sorry, your browser does not support Web Storage...");
+            }
+        </script>
     </body>
 </html>
